# rusty_trader

./: Cargo.toml  readme.md
example_configs/: config.yaml  ib_feed_dummy_broker.yaml  ib_feed_ib_broker.yaml  ib_historical_feed_ib_broker.yaml  ib_market_feed_ib_broker.yaml  test_config_backtest.yaml
src/: broker.rs  config.rs  data_feed.rs  factory.rs  lib.rs  main.rs  position_sizer.rs  strategy.rs  types.rs
src/broker/: dummy.rs  ib.rs
src/data_feed/: csv_data_feed.rs  ib_historical_data_feed.rs  ib_market_data_feed.rs
src/position_sizer/: fixed_sizer.rs  percent_of_equity_sizer.rs
src/strategy/: print.rs  sma_cross.rs
tests/: common.rs  sma_cross_test.rs
