[package]
name = "rusty_trader"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
futures = "0.3"
config = "0.15"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tokio = { version = "1.47", features = ["rt", "rt-multi-thread", "macros", "sync"] }
tracing = "0.1"
tracing-subscriber = "0.3"

# Brokers
# Interactive Brokers dependencies
ibapi = "1.2"

# Data Feeds
csv = "1.0"

[dev-dependencies]
tempfile = "3.22"